--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="">
+        <img src="/images/logo.jpg" alt="Company`s logo" />
+      </a>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Portfolio</a></li>
+      </ul>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+      <section>s</section>
+    </main>
+  </body>
 </html>
