--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
       <a href="">
         <img src="/images/logo.jpg" alt="Company`s logo" />
       </a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Portfolio</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Portfolio</a></li>
+        </ul>
+      </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
     </header>
