--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <a href="">
-        <img src="/images/logo.jpg" alt="Company`s logo" />
-      </a>
       <nav>
+        <a href="">
+          <img src="/images/logo.jpg" alt="Company`s logo" width="115" />
+        </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -22,7 +22,104 @@
       <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
     </header>
     <main>
-      <section>s</section>
+      <section>
+        <!-- Hero -->
+        <div>
+          <h1>
+            Effective Solutions <br />
+            for Your Business
+          </h1>
+          <button type="button">Order Service</button>
+        </div>
+      </section>
+      <section>
+        <!-- Profits -->
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!-- What are we doing -->
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/desktop.jpg" alt="desktop" width="360" />
+          </li>
+          <li>
+            <img src="./images/chatbots.jpg" alt="chatbots" width="360" />
+          </li>
+          <li>
+            <img src="./images/mobile.jpg" alt="mobile" width="360" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!-- Our Team -->
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/markguerrero.jpg"
+              alt="Mark Guerrero"
+              width="360"
+            />
+            <h4>Mark Guerrero</h4>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/tomford.jpg" alt="Tom Ford" width="360" />
+            <h4>Tom Ford</h4>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camilagarcia.jpg"
+              alt="Camila Garcia"
+              width="360"
+            />
+          </li>
+          <li>
+            <h4>Camila Garcia</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/danielwilson.jpg"
+              alt="Daniel Wilson"
+              width="360"
+            />
+            <h4>Daniel Wilson</h4>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
