--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+      <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
     </header>
     <main>
       <section>
@@ -121,5 +121,17 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <div>
+        <a href="">
+          <img src="./images/logo.jpg" alt="Company`s logo" width="115" />
+        </a>
+        <p>
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
