--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a href="">
-          <img src="/images/logo.jpg" alt="Company`s logo" width="115" />
+          <img src="./images/logo.jpg" alt="Company`s logo" width="115" />
         </a>
         <ul>
           <li><a href="">Studio</a></li>
