--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
     <header>
       <nav>
         <a href="">
-          <img src="./images/logo.jpg" alt="Company`s logo" width="115" />
+          <img src="./images/logo.jpg" alt="WebStudio" width="156" />
         </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
         <!-- Hero -->
         <div>
-          <h1>
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1>Effective Solutions for Your Business</h1>
           <button type="button">Order Service</button>
         </div>
       </section>
       <section>
         <!-- Profits -->
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -88,50 +90,45 @@
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
-              width="360"
+              width="264"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.jpg" alt="Tom Ford" width="360" />
-            <h4>Tom Ford</h4>
+            <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
-              width="360"
+              width="264"
             />
-          </li>
-          <li>
-            <h4>Camila Garcia</h4>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
-              width="360"
+              width="264"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <div>
-        <a href="">
-          <img src="./images/logo.jpg" alt="Company`s logo" width="115" />
-        </a>
-        <p>
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
-      </div>
+      <a href="">
+        <img src="index.html" alt="WebStudio" width="156" />
+      </a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
