--- a/index.html
+++ b/index.html
@@ -21,21 +21,19 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
         <!-- Hero -->
-        <div>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
-        </div>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
-        <!-- Profits -->
-        <h2></h2>
+        <!-- Benefits -->
+        <h2>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -122,8 +120,8 @@
       </section>
     </main>
     <footer>
-      <a href="">
-        <img src="index.html" alt="WebStudio" width="156" />
+      <a href="index.html">
+        <img src="./images/logo.jpg" alt="WebStudio" width="156" />
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
