--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <nav>
         <a href="">
           <img src="./images/logo.jpg" alt="WebStudio" width="156" />
+          WebStudio
         </a>
         <ul>
           <li><a href="">Studio</a></li>
@@ -122,6 +123,7 @@
     <footer>
       <a href="index.html">
         <img src="./images/logo.jpg" alt="WebStudio" width="156" />
+        WebStudio
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
