--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
       </section>
     </main>
     <footer>
-      <a href="index.html"> WebStudio </a>
+      <a href="./index.html">
+        <img src="./images/logo.jpg" alt="WebStudio" width="156" />
+        WebStudio
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
