--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="">
-          <img src="./images/logo.jpg" alt="WebStudio" width="156" />
-          WebStudio
-        </a>
+        <a href=""> WebStudio </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -121,10 +118,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">
-        <img src="./images/logo.jpg" alt="WebStudio" width="156" />
-        WebStudio
-      </a>
+      <a href="./index.html"> WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
